--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -1,13 +1,13 @@
 {% extends 'layouts/base.html.twig' %}
 
-{% block title 'New Pin' %}
+{% block title 'Add a New Pin' %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-md-6 mx-auto">
-            <h1>Create Pin</h1>
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<h1>Create Pin</h1>
 
-            {{ include('pins/_form.html.twig') }}
-        </div>
-    </div>
+			{{ include('pins/_form.html.twig') }}
+		</div>
+	</div>
 {% endblock %}
